@@ -1,5 +1,6 @@
 * Sat Mar 24 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 6.1.1-0
 - Add support for OEL and Puppet 5
+- Update badges and contribution guide URL in README.md
 
 * Wed Jun 21 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
 - Update custom Puppet 3 functions to namespaced, Puppet 4 functions
